[package]
name = "clade"
version = "0.1.0"
edition = "2021"
description = "A tool for phlyo tree, a phylogenetic tree construction software."
license = "MIT"
keywords = ["phylogenetics", "evolution", "tree"]
authors = ["dagou <eric9n@gmail.com>"]
repository = "https://github.com/eric9n/clade"
readme = "README.md"


[dependencies]
reqwest = { version = "0.12", features = ["blocking", "multipart", "gzip"] }
flate2 = "1.0"
tar = "0.4"
clap = { version = "4.0", features = ["derive"] }
