[package]
name = "clade"
version = "0.1.2"
edition = "2021"
description = "A tool for phlyo tree, a phylogenetic tree construction software."
license = "MIT"
keywords = ["phylogenetics", "evolution", "tree"]
authors = ["dagou <eric9n@gmail.com>"]
repository = "https://github.com/eric9n/clade"
readme = "README.md"

[dependencies]
reqwest = { version = "0.12", features = ["blocking", "multipart", "gzip"] }
flate2 = "1.0"
tar = "0.4"
regex = "1.5"
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
gtdb_tree = "0.1.9"


[[bin]]
name = "clade"
path = "src/main.rs"


[profile.release]
lto = true
opt-level = "s" # 或者 "z"
debug-assertions = false
# panic = 'abort'
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
strip = true # Remove debug symbols
